removed css elipse that was not correct and fixed spacing issue related to img heigt

--- a/TheatreCMS/Content/Site.css
+++ b/TheatreCMS/Content/Site.css
@@ -2408,7 +2408,6 @@ tr.event-row {
 
 .arch-card-img {
     width: 100%;
-    height: 15vw;
     object-fit: contain;
 }
 
@@ -3872,14 +3871,6 @@ hr.Isaiah_castline { /*Styling the seperation line*/
 
 /*CSS for Arcive View by Jeff Staab*/
 /*creates an elipsis if multi-line text is over 6 lines long.*/
-.pa-details-elipsis {
-    text-indent: 15px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 6;
-    -webkit-box-orient: vertical;
-}
 
 /*card formatting for Arcive page*/
 .pa-card {
